--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-masked-view/masked-view": "0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
+    "buffer": "^6.0.3",
     "expo": "~49.0.15",
     "expo-application": "~5.3.0",
     "expo-auth-session": "~5.0.2",
@@ -23,9 +25,11 @@
     "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-google-button": "^0.1.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
