--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-app-auth": "^7.1.0",
     "react-native-google-button": "^0.1.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.6.3",
