--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "buffer": "^6.0.3",
     "expo": "~49.0.15",
     "expo-application": "~5.3.0",
@@ -31,7 +32,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-skeleton-placeholder": "^5.2.4",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "whatwg-fetch": "^3.6.20"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
